# diffusion_equation_bayes_opt

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
cmake/: Findbayesopt.cmake
example/: fluid_phi.vtu  solid_phi.vtu  test.tp  vessel_phi.vtu
example/CSF_100/: test.tp
example/No.11/normal/: fluid_phi.vtu  r_parameter.h5  solid_phi.vtu
example/No.11/tenuri/: fluid_phi.vtu  r_parameter.h5  solid_phi.vtu  vessel_phi.vtu
example/No.12/normal/: r_parameter.h5
example/No.12/tmp/phi_vessel_max_1/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_11/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_12/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_13/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_14/: ev_c.vtu  phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_15/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_16/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_17/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu  r_parameter.h5
example/No.12/tmp/phi_vessel_max_18/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_19/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_2/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_20/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_21/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_22/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_23/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_24/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_25/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_26/: ev_c.vtu  phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_27/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_28/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_29/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_3/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_30/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_4/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_5/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_6/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_7/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_8/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/No.12/tmp/phi_vessel_max_9/: phi_fluid.vtu  phi_solid.vtu  phi_vessel.vtu
example/base_example/: test.tp
example/vessel_0_5_modify/: test.tp
include/diffusion_include/: diffusion_function.hpp  two_diffusion.hpp
src/: CMakeLists.txt
src/diffusion_bayesopt/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  csr_matrix.cpp  fileIO.cpp  two_dimensional.cpp
